# hydra_grapheqa_vlm

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
grapheqa_ros2/: dsg_bridge_node.py  executor_node.py  frontier_node.py  grapheqa_infer_server.py  plan_result_to_decision_node.py  sg_ros_adapter.py  visual_memory_node.py  vlm_planner_bridge.py  vlm_planner_node.py
grapheqa_ros2/graph_eqa/: .gitignore  README.md  setup.py
grapheqa_ros2/graph_eqa/cfg/: explore_eqa_dataset_enrich_labels.yaml  grapheqa_habitat.yaml  grapheqa_hmeqa_habitat.yaml  grapheqa_openeqa_habitat.yaml  grapheqa_stretch.yaml  open-eqa-choices.json  openeqa_init_trajs.json  real_world_questions.yaml  stretch_interface.yaml
grapheqa_ros2/graph_eqa/cfg/label_spaces/: hm3d_label_space.yaml  myhome_label_space.yaml
grapheqa_ros2/graph_eqa/graph_eqa/detection/: detic_segmenter.py  grounded_sam2.py
grapheqa_ros2/graph_eqa/graph_eqa/envs/: habitat.py  habitat_interface.py  trajectory.py  utils.py
grapheqa_ros2/graph_eqa/graph_eqa/logging/: rr_logger.py  utils.py
grapheqa_ros2/graph_eqa/graph_eqa/occupancy_mapping/: geom.py  tsdf.py
grapheqa_ros2/graph_eqa/graph_eqa/planners/: vlm_planner_claude.py  vlm_planner_gemini.py  vlm_planner_gpt.py  vlm_planner_llama.py
grapheqa_ros2/graph_eqa/graph_eqa/utils/: data_utils.py  (+1 more)
grapheqa_ros2/graph_eqa/scripts/: post_process_results.py  run_vlm_planner_eqa_stretch.py  run_vlm_planner_hmeqa_habitat.py  run_vlm_planner_openeqa_habitat.py  test_llama.py
grapheqa_ros2/graph_eqa/tests/: test_random_exp_habitat.py
launch/: grapheqa.launch.py
(+3 files in other folders)
