<?xml version="1.0"?>
<package format="3">
  <name>grapheqa_ros2</name>
  <version>0.0.1</version>
  <description>GraphEQA VLM planner adapter for Hydra + ROS2 + Nav2</description>
  <maintainer email="you@todo.todo">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav2_msgs</depend>

  <!-- These are pip deps; listed here only as documentation -->
  <!-- networkx, numpy, opencv-python, cv-bridge, pydantic, openai -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
